update file CSS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="description" content="Description of your page for SEO" />
         <meta name="keywords" content="HTML, Web Development, SEO" />
         <title>Virat Kohli</title>
-        <link rel="stylesheet" href="/normalize/normalize.css">
-        <link rel="stylesheet" href="/normalize/styles.css">
+        <link rel="stylesheet" href="CSS/normalize.css">
+        <link rel="stylesheet" href="CSS/styles.css">
       
       </head>
       
